Fix build for Minecraft 1.21.1